--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "test": "jest --verbose",
-    "start": "webpack-dev-server --content-base dist/ --colors"
+    "start": "webpack-dev-server"
   },
   "jest": {
     "rootDir": "./src",
